--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
