--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:init": "prisma init --datasource-provider mongodb",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:reset": "prisma db push --force-reset",
+    "db:seed": "prisma db seed",
+    "db:studio": "prisma studio",
+    "db:shell": "ts-node prisma/shell.ts"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@prisma/client": "^5.18.0",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
@@ -24,6 +32,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "prisma": "^5.18.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
