chore(npm): install bcryptjs

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@prisma/client": "^5.18.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
