feat(api): init

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://root:randompassword@cluster0.ab1cd.mongodb.net/mydb?retryWrites=true&w=majority"
+
+# JWT
+ACCESS_TOKEN_SECRET=your_access_token_secret_key
+ACCESS_TOKEN_LIFETIME=1h
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_key
+REFRESH_TOKEN_LIFETIME=7d
