--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@prisma/client": "^5.18.0",
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
