--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@prisma/client": "^5.18.0",
+    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.28",
