--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
