--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
